deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quotes-api
  name: quotes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-api
  template:
    metadata:
      labels:
        app: quotes-api
    spec:
      containers:
      - image: docker.io/mennahg/angular_image
        name: angular-cont
