service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quotes
  name: quotes-api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: quotes-api
